# EvidentialDL

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
evidential_dl/: layers.py
evidential_dl/losses/: continuous.py  discrete.py
evidentialdl/: layers.py
evidentialdl/layers/: __init__.py  continuous.py  discrete.py
evidentialdl/losses/: __init__.py  continuous.py  discrete.py
tests/: test_classification.ipynb  test_classification.py  test_regression.ipynb  test_regression.py
