[tool.poetry]
name = "evidentialdl"
version = "0.1.0"
description = ""
authors = ["PhilippeRacicot <10731763+Vaunorage@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.11.0"
numpy = "^1.21.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
