[tool.poetry]
name = "evidentialdl"
version = "0.2.1"
description = "A small package implementing evidential dl"
authors = ["PhilippeRacicot <10731763+Vaunorage@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">= 3.8, < 3.11"
torch = "^1.11.0"
numpy = "^1.21.5"

[tool.poetry.dev-dependencies]
torch = "*"
torchvision = "*"
tensorflow = "*"
matplotlib = "*"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.1"
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
